# TRP1-Automatos-Auditor

./: .env.example  .gitignore  ENV_SETUP.md  README.md  package-lock.json  package.json  pyproject.toml  report_2026-02-27_11-33-16.md
.specify/memory/: constitution.md
audit/: README.md  audit_report.md  report_2026-02-27_12-24-45.md  report_2026-02-27_14-48-25.md  report_2026-02-27_14-49-28.md  report_2026-02-27_14-54-26.md  report_2026-02-27_14-54-27.md  report_2026-02-27_14-54-30.md  report_2026-02-27_14-55-50.md  report_2026-02-27_15-02-52.md  report_2026-02-27_15-18-17.md  report_2026-02-27_15-30-14.md  report_2026-02-27_15-35-05.md  report_2026-02-27_15-38-48.md  report_2026-02-27_16-04-36.md  report_2026-02-27_16-08-01.md  report_2026-02-27_16-23-06.md  report_2026-02-27_16-56-08.md  report_2026-02-27_16-58-42.md  report_2026-02-27_17-05-52.md
audit/report_bypeer_received/: peer_received_report_2026-02-28.md
audit/report_onpeer_generated/: report_2026-02-28_17-12-04.md  report_2026-02-28_17-36-03.md
audit/report_onself_generated/: report_2026-02-28_16-29-32.md
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: run_audit.py
specs/: functional-spec.md  multi-model-stack-spec.md  spec-summary.json  spec.md  technical-spec.md
specs/002-phase1-production-env/: data-model.md  docs-testing.md  plan.md  quickstart.md  research.md  spec-web-ui.md  tasks.md
specs/checklists/: requirements.md
src/: __main__.py  api.py  audit_classifier.py  cli.py  config.py  graph.py  llm.py  llm_errors.py  parallelism_checks.py  rubric_loader.py  run_store.py  state.py
(+26 files in other folders)
